Handeling Conflicts first cherrypick (6)

--- a/WebpageTest/mysite/intellishop/templates/intellishop/filter_search.html
+++ b/WebpageTest/mysite/intellishop/templates/intellishop/filter_search.html
@@ -744,7 +744,7 @@
     cursor: pointer;
     gap: 18px;
     transition: background 0.2s;
-    margin: 0 auto 8px auto;
+    margin: 20px auto 20px auto;
     outline: none;
 }
 .custom-back-btn.right-arrow:hover {
@@ -777,12 +777,8 @@
 /* === CSS for SVG Arrow === */
 .arrow-svg {
     display: block;
-    width: 56%; 
-    height: 56%; 
-}
-
-#all-discounts-container {
-    margin-top: 8px !important;
+    width: 80%;
+    height: 80%;
 }
 </style>
 
