--- a/WebpageTest/mysite/intellishop/templates/intellishop/filter_search.html
+++ b/WebpageTest/mysite/intellishop/templates/intellishop/filter_search.html
@@ -34,7 +34,7 @@
         <!-- Price Range by fixed amount Section -->
         <div class="filter-section">
             <div class="section-header">
-                <h3>Enable Price Range by Value</h3>
+                <h3>Price Range by Value</h3>
                 <i class="bi bi-chevron-down"></i>
             </div>
             <div class="filter-options">
